Development
    Updated Polish translation
    Add hidden preference 'fullscreen' which does the same as the --fullscreen command line option
    Add bobdeint and queue options to xvmc when deinterlace is enabled
    Updated Korean translation
    Add new commandline option --fullscreen that opens the video in fullscreen mode
    Rework how accelerators are called, and remap them on keymap change
    make indent
    Remove eq filter when using xvmc vo
    Disable deinterlace filters when xvmc is enabled
    Added vo of xvmc to the list, the codec is forced to ffmpeg12mc when this option is selected
    Reference cleanups
    Updated Turkish translation
    Fix misplaced ;, was block all art fetches
    Only create cover art cache path, if we are going to download something
    Force refresh of GUI at end of refresh_window
    Fix bug #108, when in shuffle mode, deleted items come back when unshuffled
    Show remote files on recent list when GIO enabled
    Rework cover art loading to minimize calls to musicbrainz
    Updated French translation
    Added the ability to play a DVD from an ISO image
    Safety checks for musicbrains3
    Change cover art cache file when using 'guess' at what we are looking for
    Capture SIGTERM as well
    Shutdown mplayer when we get a SIGHUP (example is when X is forced to quit)
    Allow window decorations when running as a plugin but embedding is disabled
    Use the cache when streaming, a playlist or when forced, otherwise don't
    Cleanup media info display and usage of cache
    Disable the mplayer cache, unless media is streaming
    Hide media lable when running as plugin
    Fix bug in dbus open method
    Detect <smil> files are playlists, but don't parse them
    Fix drag and drop, so that when playlist is not visible items dropped on start playing
    Change return type of add_item_to_playlist
    When running in vertical mode and playing songs, keep pane from bouncing around
    Fix bug 149 at rpmfusion